<resources>
    <string name="app_name">NUMAD22Fa_PeiyaoXin</string>
    <string name="about_button">About Me</string>
    <string name="clicky_button">Clicky Clicky</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="buttonE">E</string>
    <string name="buttonF">F</string>
    <string name="tv_pressed">Pressed: -</string>
    <string name="about_name">Peiyao Xin</string>
    <string name="about_email">xin.pe@northeastern.edu</string>
    <string name="link_collector">Link Collector</string>
    <string name="input_name">Name</string>
    <string name="input_URL">Link</string>
    <string name="submit">Submit</string>
    <string name="prime">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacific_switch">Pacific Switch</string>
    <string name="current_number">Current Number Being Checked</string>
    <string name="prime_number">Latest Prime Number Found</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="total_distance">Total Distance Traveled:</string>
    <string name="reset_distance">Reset Total Distance</string>

</resources>